update-finalized version

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pydantic>=2.8.0
 pydantic-settings>=2.2.1
 python-dotenv>=1.0.1
 datasets>=2.19.0
+huggingface_hub>=0.24.0
 
 
 # Optional speed/memory extras
